--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,8 +39,7 @@
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root",
-    
-    "postCreateCommand": "echo $(whoami) && sudo chown -R $(whoami) /usr/local/ && sudo chown -R $(whoami) /opt/ && sudo chmod -R u=rwx /usr/local/ && sudo chmod -R u=rwx /opt/",
+    "postCreateCommand": "bash container-create.sh",
     "postStartCommand": "bash container-start.sh"
 
 
